# winzy-webcam

./: README.md  pyproject.toml
tests/: test_winzy_webcam.py
winzy_webcam/: __init__.py
